--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -120,7 +120,7 @@ a {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 /* Menu Button Styling */
@@ -318,6 +318,27 @@ a {
     padding: 4px 0;
 }
 
+.post-edit {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.post-edit-form {
+    flex-grow: 1;
+    margin-right: 12px;
+}
+
+.post-edit-input {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 4px;
+    font-size: 16px;
+    border: 1px dotted #D9D9D9;
+    outline: none;
+}
+
 .card-top {
     padding: 12px 16px;
 }
@@ -373,10 +394,16 @@ a {
     margin-top: 0 !important;
 }
 
-.delete-card {
+.post-mgmt-icons > * {
     cursor: pointer;
     font-size: 20px;
     color: #A5A5A5;
+    margin-left: 4px;
+}
+
+.edit-card > i {
+    font-size: 16px;
+    transform: translateY(-2px);
 }
 
 /* COMMENTS */
@@ -387,4 +414,8 @@ a {
 
 .comment-body {
     margin-left: 16px;
+}
+
+.comment-box {
+    margin-top: 12px;
 }
