--- a/src/main/resources/templates/posts/post_container.html
+++ b/src/main/resources/templates/posts/post_container.html
@@ -7,14 +7,25 @@
                         <h3><span th:text="${post.userId == currentUser ? 'You' : post.nickname}"></span> posted</h3>
                         <h5 th:text="${post.timeSince(currentTime)}"></h5>
                     </div>
-                    <span class="delete-card" th:if="${post.userId == currentUser}"><i class="fa-solid fa-xmark"></i></span>
+                    <div class="post-mgmt-icons" th:if="${post.userId == currentUser}">
+                        <span class="edit-card"><i class="fa-regular fa-pen-to-square"></i></span>
+                        <span class="delete-card"><i class="fa-solid fa-xmark"></i></span>
+                    </div>
                 </div>
                 <p class="post-content" th:text="${post.content}"></p>
+                <div th:id="'edit-post-' + ${post.id}" class="post-edit hidden">
+                    <form class="post-edit-form">
+                        <input type="text" class="post-edit-input" />
+                    </form>
+                    <div class="post-mgmt-icons cancel-edit">
+                        <i class="fa-solid fa-ban"></i>
+                    </div>
+                </div>
                 <h5 th:id="'likes-string-' + ${post.id}" class="who-liked-this" th:text="${likesHandler.getLikedString(post.id, post.liked)}"></h5>
 
                 <div class="comments-section hidden">
                     <div th:each="comment: ${commentsHandler.getCommentsWithData(post.id)}">
-                        <h5 class="comment-header" th:text="${comment.nickname} + ' commented (' + ${comment.timeSince(currentTime)} + '):'"></h5>
+                        <h5 class="comment-header" th:text="${comment.userId == currentUser ? 'You' : comment.nickname} + ' commented (' + ${comment.timeSince(currentTime)} + '):'"></h5>
                         <h6 class="comment-body" th:text="${comment.content}"></h6>
                     </div>
                     <div class="comment-box">
@@ -45,7 +56,7 @@
                 <div class="icon-group comments-button" th:with="commentsCount=${commentsHandler.count(post.id)}">
                     <span><i class="fa-regular fa-comment"></i></span>
                     <p>Comments</p>
-                    <span class="no-margin" th:if="${commentsCount > 0}">
+                    <span class="counter-element no-margin" th:classappend="${commentsCount > 0} ? '' : 'hidden'">
                         (<span class="comments-counter" th:text="${commentsCount}"></span>)
                     </span>
                 </div>
@@ -63,13 +74,19 @@
             cards.forEach(card => {
                 const likeGroup = card.querySelector('.like-group');
                 const likedGroup = card.querySelector('.liked-group');
+                const editButton = card.querySelector('.edit-card');
+                const cancelEdit = card.querySelector('.cancel-edit');
                 const deleteButton = card.querySelector('.delete-card');
+                const postContent = card.querySelector('.post-content');
+                const postEdit = card.querySelector('.post-edit');
+                const postEditInput = postEdit.querySelector('.post-edit-input');
                 const commentsButton = card.querySelector('.comments-button');
                 const commentsSection = card.querySelector('.comments-section');
-                const commentBox = card.querySelector('.comment-box');
-                const commentForm = card.querySelector('.form-post');
-                const commentInput = card.querySelector('.input-post');
+                const commentBox = commentsSection.querySelector('.comment-box');
+                const commentForm = commentsSection.querySelector('.form-post');
+                const commentInput = commentsSection.querySelector('.input-post');
                 const likeString = card.querySelector('.who-liked-this');
+                const counterElement = card.querySelector('.counter-element');
                 const commentsCounter = card.querySelector('.comments-counter');
 
                 const likedByUser = card.dataset.liked;
@@ -79,6 +96,22 @@
                     likeGroup.classList.add('hidden');
                 } else {
                     likedGroup.classList.add('hidden');
+                }
+
+                if (editButton) {
+                    editButton.addEventListener('click', function(event) {
+                        postEditInput.value = postContent.innerText;
+                        postContent.classList.add('hidden');
+                        postEdit.classList.remove('hidden');
+                        editButton.classList.add('hidden');
+                        postEditInput.select();
+                        postEditInput.setSelectionRange(postEditInput.value.length, postEditInput.value.length);
+                    });
+                    cancelEdit.addEventListener('click', function(event) {
+                        postEdit.classList.add('hidden');
+                        postContent.classList.remove('hidden');
+                        editButton.classList.remove('hidden');
+                    });
                 }
 
                 if (deleteButton) {
@@ -171,7 +204,7 @@
                     .then(comment => {
                         const newComment = document.createElement('div');
                         newComment.innerHTML = `
-                            <h5 class="comment-header">${comment.nickname} commented (${comment.timeAgo}):</h5>
+                            <h5 class="comment-header">You commented (${comment.timeAgo}):</h5>
                             <h6 class="comment-body">${comment.content}</h6>
                         `;
                         commentsSection.insertBefore(newComment, commentBox);
@@ -181,6 +214,7 @@
                     });
 
                     commentsCounter.innerText = parseInt(commentsCounter.innerText) + 1;
+                    counterElement.classList.remove('hidden');
 
                     const commentMargins = 20;
                     const newCommentDiv = document.querySelector('.comments-section > :nth-last-child(2)');
